ほぼ完成！だんご状態だけど。。。

--- a/SampleMyApp2/markup/index.html
+++ b/SampleMyApp2/markup/index.html
@@ -51,7 +51,7 @@ display: -moz-box;
 #text   {  
     width: 80%;
     color:#888888;
-    font-size:10px;
+    font-size:14px;
     font-family: "ヒラギノ角ゴ ProN W3",sans-serif;
     -webkit-box-ordinal-group: 2;　/* Safari,Google Chrome用（1番目に表示） */  
     -moz-box-ordinal-group: 2;　/* Firefox用（1番目に表示） */
@@ -65,7 +65,8 @@ body {
 
 background-image:url("52line.png");
 background-position:18px,10px;
-background-repeat:repeat-y,no-repeat;
+background-repeat:repeat-y;
+background-attachment:fixed;
 
 }
 
@@ -88,15 +89,18 @@ align = middle;
 #acMenu dt{
     display:block;
     width:200px;
-    height:53px;
-    line-height:50px;
-    text-align:center;
+    height:35px;
+    padding-top:18px;
+    margin-left:40px;
+    line-height:18px;
+    text-align:left;
     cursor:pointer;
 }
 #acMenu dd{
     width:200px;
     text-align:left;
     display:none;
+   
 }
 
 li{
